# universal-archiver

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: headers.rs  lib.rs  main.rs
src/format/: gzip.rs  mod.rs  tar.rs  xz.rs  zip.rs
src/utils/: channel_sink.rs  mod.rs  xz_decoder.rs
