[package]
name = "extract-archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "extract-archive"

[dependencies]
anyhow = "1.0.57"
color-eyre = "0.6.1"
tracing = "0.1.34"
zip = "0.6.2"
tracing-subscriber = {version = "0.3.11", features = ["env-filter"]}

[dependencies.clap]
version = "3.1.12"
features = ["derive"]